<resources>
    <string name="app_name">Equipment Inspection</string>
    <string name="login_password_hint">Enter Password</string>
    <string name="login_email_hint">Entrer Email</string>
    <string name="login_login_button_text">Login</string>
    <string name="login_register_button_text">Register</string>
    <string name="login_title_text">Equipment Inspection</string>
    <string name="register_title_text">Equipment Inspection</string>
    <string name="action_logout_text">Logout</string>
    <string name="action_settings_text">Settings</string>

    <string name="register_password_retype_hint">Confirm Password</string>
    <string name="register_register_button_text">Register</string>
    <string name="register_login_button_text">Login</string>
    <string name="register_email_hint">Enter Email</string>
    <string name="register_password_hint">Enter Password</string>
    <string name="register_firstname_hint">Enter First Name</string>
    <string name="register_lastname_hint">Enter Last Name</string>
    <string name="bottom_inspection_text">Inspection</string>
    <string name="bottom_equipment_text">Equipment</string>
    <string name="bottom_inspector_text">Inspector</string>
    <string name="equipment_edit_text">Edit</string>
    <string name="equipment_delete_text">Delete</string>
    <string name="equipment_add_text">Add</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="equipment_name_hint">Name</string>
    <string name="equipment_price_hint">Price</string>
    <string name="equipment_warrantyDate_hint">Warranty Date</string>
    <string name="equipment_lastInspection_hint">Last Inspection</string>
    <string name="equipment_lastInspector_hint">Last Inspector</string>
    <string name="equipment_nextInspection_hint">Next Inspection</string>
    <string name="equipment_nextInspector_hint">Next Inspector</string>
    <string name="equipment_status_hint">Status</string>

    <string name="inspection_edit_text">Edit</string>
    <string name="inspection_delete_text">Delete</string>
    <string name="inspection_add_text">Add</string>
    <string name="inspection_date_hint">Inspection Date</string>
    <string name="inspection_nextInspectionDate_hint">Next Inspection Date</string>
    <string name="equipment_purchaseDate_hint">Purchase date</string>
    <string name="inspection_inspector_hint">Inspector</string>
    <string name="inspection_status_hint">Status</string>

    <string name="inspector_edit_text">Edit</string>
    <string name="inspector_delete_text">Delete</string>
    <string name="inspector_add_text">Add</string>
    <string name="inspector_firstName_hint">First Name</string>
    <string name="inspector_lastName_hint">Last Name</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Errors -->
    <string name="error_password_retype">The passwords do not match</string>
    <string name="error_invalid_email">Invalid email entered</string>
    <string name="error_invalid_password">Invalid password (6 characters min)</string>
    <string name="error_empty_field">Please fill in the field</string>
    <string name="error_already_registered">Email not available</string>
    <string name="error_dates_field">Purchase date is superior to warranty date</string>
    <string name="error_inspection_date">Date can not be set as today</string>

    <!-- Preference Titles -->
    <string name="settings_about_text">About</string>
    <string name="settings_display_text">Display</string>
    <string name="settings_information_text">Information</string>

    <!-- Display Preferences -->
    <string name="settings__title">Sync email periodically</string>
    <string name="settings_darkmode_title">Dark Mode</string>
    <string name="inspection_equipment_hint">Equipment</string>
    <string name="inspection_inspector_spinner_hint">Choose an inspector...</string>
    <string name="inspection_equipment_spinner_hint">Choose an equipment...</string>
    <string name="error_incorrect_password">Password incorrect</string>
    <string name="error_invalid_login">Invalid login credentials</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_light_text">Light Mode</string>
    <string name="settings_dark_text">Dark Mode</string>
    <string name="pref_about_text">This app was developed to check the equipment inside your company</string>
    <string name="pref_header_about">About</string>
    <string name="equipment_image_text">Add</string>
    <string name="settings_mode_text">Change Background</string>
    <string name="generic_error">An error occured</string>
    <string name="title_activity_delete_equipment">Delete equipment</string>
    <string name="equipment_delete_msg">Do you really want to delete the equipment %1$s?</string>
    <string name="inspector_delete_msg">Do you really want to delete the inspector %1$s?</string>
    <string name="inspection_delete_msg">Do you really want to delete %1$s?</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_accept">Accept</string>
    <string name="title_activity_delete_inspection">Delete Inspection</string>
    <string name="inspection_validate_text">Validate</string>
    <string name="inspector_mail_hint">Email</string>
    <string name="inspection_equipmentName_hint">Equipment</string>
    <string name="inspector_password_text">Change Password</string>
    <string name="inspector_password_hint">Password</string>
</resources>